--- a/ThinkBlink/app/src/main/res/layout/activity_main.xml
+++ b/ThinkBlink/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
-
+    <!--  Button to trigger Floating Widget Service -->
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:id="@+id/create_floating_widget"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add floating button"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="341dp" />
-</android.support.constraint.ConstraintLayout>
+        android:onClick="createFloatingWidget"
+        android:text="@string/create_floating_widget"
+        android:textColor="@android:color/white"
+        android:textSize="14sp" />
+</LinearLayout>
