--- a/ThinkBlink/app/src/main/res/values/colors.xml
+++ b/ThinkBlink/app/src/main/res/values/colors.xml
@@ -3,4 +3,15 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="primary">#2196F3</color>
+    <color name="primary_dark">#1976D2</color>
+    <color name="primary_light">#BBDEFB</color>
+    <color name="accent">#009688</color>
+    <color name="primary_text">#DD000000</color>
+    <color name="primary_text_dark_background">#FFFFFF</color>
+    <color name="secondary_text">#89000000</color>
+    <color name="icons">#FFFFFF</color>
+    <color name="divider">#30000000</color>
+    <color name="status_bar_color">#FF0000</color>
+    <color name="status_bar_to_color">#00FF00</color>
 </resources>
