--- a/ThinkBlink/app/src/main/res/values/styles.xml
+++ b/ThinkBlink/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TranslucentActionBar" parent="@android:style/Widget.Material.ActionBar">
+        <item name="android:textColorPrimary">@color/primary_text_dark_background</item>
+    </style>
+
 </resources>
