Face detection for an image

--- a/ThinkBlink/app/src/main/res/layout/activity_main.xml
+++ b/ThinkBlink/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- Use DrawerLayout as root container for activity -->
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="10dp"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-    <!--  Button to trigger Floating Widget Service -->
-    <Button
-        android:id="@+id/create_floating_widget"
+    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="createFloatingWidget"
-        android:text="@string/create_floating_widget"
-        android:textColor="@android:color/white"
-        android:textSize="14sp" />
+        android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/status_bar_flicker"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="statusBarFlicker"
-        android:text="Status bar flicker"
-        android:textColor="@android:color/white"
-        android:textSize="14sp" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/vibrate_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="vibratePhone"
-        android:text="Vibrate phone"
-        android:textColor="@android:color/white"
-        android:textSize="14sp" />
+            <Button
+                android:id="@+id/create_floating_widget"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="createFloatingWidget"
+                android:text="@string/create_floating_widget"
+                android:textColor="@android:color/white"
+                android:textSize="14sp" />
 
-</LinearLayout>
+            <Button
+                android:id="@+id/status_bar_flicker"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="statusBarFlicker"
+                android:text="Status bar flicker"
+                android:textColor="@android:color/white"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/vibrate_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="vibratePhone"
+                android:text="Vibrate phone"
+                android:textColor="@android:color/white"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+    </FrameLayout>
+
+    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/drawer_view" />
+
+</android.support.v4.widget.DrawerLayout>
+<!--
+<?xml version="1.0" encoding="utf-8"?>
+
+-->
+
